feat: Add app icon and remove deprecated date utils
Introduces a favicon for the web application to improve branding and user recognition.
Removes unused and deprecated functions related to weekly calendar calculations from `dateUtils.ts` to streamline the codebase.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>우리가족 목표달성</title>
+    <link rel="icon" href="./icon.svg" type="image/svg+xml">
     
     <script>
       // Initialize theme from localStorage or system preference to prevent FOUC
@@ -99,6 +100,6 @@
     <div class="absolute top-0 z-0 h-full w-full bg-transparent bg-[linear-gradient(to_right,rgba(128,128,128,0.07)_1px,transparent_1px),linear-gradient(to_bottom,rgba(128,128,128,0.07)_1px,transparent_1px)] bg-[size:24px_24px]"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" class="relative z-10"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
