--- a/index.html
+++ b/index.html
@@ -102,6 +102,6 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" class="relative z-10"></div>
     <script src="https://unpkg.com/@babel/standalone@7/babel.min.js"></script>
-    <script type="text/babel" data-presets="react,typescript" src="./index.tsx"></script>
+    <script type="text/babel" data-type="module" data-presets="react,typescript" src="./index.tsx"></script>
   </body>
 </html>
